<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrangChu.taikhoan"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:background="@drawable/corner_boder_green"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/img_caidat_anhdaidien"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circle_drawable"
                android:src="@drawable/ic_baseline_person_24"
                />
            <TextView
                android:layout_marginTop="45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_black"
                android:id="@+id/txt_caidat_tecmmguoidung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quang Huy"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:textColor="@color/trang"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="18dp"
            android:background="@color/trang"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/txt_caidat_tienich"
                android:textColor="@color/xanhdam"
                android:fontFamily="@font/muli_black"
                android:textStyle="normal"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:text="@string/tienich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="@null"
                    android:id="@+id/img_caidat_thoitiet"
                    android:src="@drawable/ic_baseline_wb_cloudy_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_caidat_thoitiet"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli_black"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/den"
                    android:text="@string/thoitiet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:id="@+id/view_caidat_view1"
                android:layout_below="@+id/lnl_ViecLam_phan1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/xanh2"
                />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/img_caidat_xoso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_widgets_24" />
                <TextView
                    android:id="@+id/txt_caidat_xoso"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli_black"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/den"
                    android:text="@string/xoso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:id="@+id/view_caidat_view2"
                android:layout_below="@+id/lnl_ViecLam_phan1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/xanh2"
                />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="@null"
                    android:id="@+id/img_caidat_giavang"
                    android:src="@drawable/ic_baseline_volcano_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_caidat_giavang"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli_black"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/den"
                    android:text="@string/giavang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:id="@+id/view_caidat_view3"
                android:layout_below="@+id/lnl_ViecLam_phan1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/xanh2"
                />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="@null"
                    android:id="@+id/img_caidat_lichviet"
                    android:src="@drawable/ic_baseline_calendar_month_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_caidat_lichviet"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli_black"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/den"
                    android:text="@string/lichviet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginTop="5dp"
            android:id="@+id/view_caidat_view4"
            android:layout_below="@+id/lnl_ViecLam_phan1"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@color/xam"
            />

        <LinearLayout
            android:padding="18dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_caidat_nangcao"
                android:textColor="@color/xanhdam"
                android:fontFamily="@font/muli_black"
                android:textStyle="normal"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:text="@string/caidat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_caidat_chedo"
                    android:src="@drawable/ic_baseline_nightlight_round_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_caidat_chedo"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/muli_black"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:textColor="@color/den"
                    android:text="@string/chedotoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Switch
                    android:layout_marginLeft="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track"
                    android:id="@+id/sw_taikhoan_sangtoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:background="@drawable/corner_border_gray"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="40dp">
            <ImageView
                android:id="@+id/img_caidat_dangxuat"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_logout_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txt_caidat_dangxuat"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/muli"
                android:textColor="@color/doo"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:text="Đăng xuất"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>